--- a/Capjak.html
+++ b/Capjak.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Zadnja pjesma Soljanima</title>
+        <title>Zadnja pjesma Soljani</title>
         <link rel="stylesheet" href="styles.css.css">
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
